--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
 @layer components {
   .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
+    @apply py-2 px-4;
+  }
+
+  a {
+    @apply hover:text-blue-600
+  }
+
+  .view-title {
+    @apply text-xl font-semibold
   }
 }
 
-*/
