Testes de sistema para registro de lotes criado. Rotas views e controllers modificados para cobrir os testes. Pequena adição/modificação no assets

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -12,7 +12,11 @@
   }
 
   .view-title {
-    @apply text-xl font-semibold
+    @apply my-6 text-xl font-semibold
+  }
+
+  .errors {
+    @apply text-red-400
   }
 }
 
