--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,29 @@
 <% if user_signed_in? && current_user.is_admin? %>
-  <h1 class="text-lg font-semibold">Admin Menu</h1>
 
-  <div class="menu m-auto w-[532px] flex flex-col gap-4">
+  <div id='batch-menu' class='menu mx-auto mb-6 w-[532px] flex flex-col gap-2'>
+    <span class='text-lg font-semibold'>Lotes</span>
+
     <%= link_to 'Aprovar Lotes', batches_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %> <!-- yet to implement -->
     <%= link_to 'Cadastrar Lotes', new_batch_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
+  </div>
+
+  <div id='product-menu' class='menu mx-auto mb-6 w-[532px] flex flex-col gap-2'>
+    <span class='text-lg font-semibold'>Produtos</span>
+
+    <%= link_to 'Listar Produtos', products_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
     <%= link_to 'Cadastrar Produtos', new_product_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
+  </div>
+
+  <div id='category-menu' class='menu mx-auto mb-6 w-[532px] flex flex-col gap-2'>
+    <span class='text-lg font-semibold'>Categorias</span>
+
+    <%= link_to 'Listar Categorias', categories_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
     <%= link_to 'Cadastrar Categorias', new_category_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
   </div>
 <% else %>
-  <h1 class="text-lg font-semibold">Menu</h1>
+  <h1 class='text-lg font-semibold'>Menu</h1>
 
-  <div class="menu m-auto w-[532px] flex flex-col gap-4">
+  <div class='menu m-auto w-[532px] flex flex-col gap-4'>
     <%= link_to 'Lotes em Leilão', batches_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
   </div>
 <% end %>
