--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,8 @@
 <% if user_signed_in? && current_user.is_admin? %>
-
   <div id='batch-menu' class='menu mx-auto mb-6 w-[532px] flex flex-col gap-2'>
     <span class='text-lg font-semibold'>Lotes</span>
 
-    <%= link_to 'Aprovar Lotes', batches_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %> <!-- yet to implement -->
+    <%= link_to 'Aprovar Lotes', batches_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
     <%= link_to 'Cadastrar Lotes', new_batch_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
   </div>
 
@@ -21,10 +20,22 @@
     <%= link_to 'Cadastrar Categorias', new_category_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
   </div>
 <% else %>
-  <h1 class='text-lg font-semibold'>Menu</h1>
+  <div id='batch-menu' class='menu mx-auto mb-6 w-[532px] flex flex-col gap-2'>
+    <span class='text-lg font-semibold'>Lotes</span>
 
-  <div class='menu m-auto w-[532px] flex flex-col gap-4'>
     <%= link_to 'Lotes em Leilão', batches_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
+  </div>
+
+  <div id='product-menu' class='menu mx-auto mb-6 w-[532px] flex flex-col gap-2'>
+    <span class='text-lg font-semibold'>Produtos</span>
+
+    <%= link_to 'Listar Produtos', products_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
+  </div>
+
+  <div id='category-menu' class='menu mx-auto mb-6 w-[532px] flex flex-col gap-2'>
+    <span class='text-lg font-semibold'>Categorias</span>
+
+    <%= link_to 'Listar Categorias', categories_path, class: 'px-2 py-4 text-lg bg-gray-100 rounded' %>
   </div>
 <% end %>
 
