--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,11 @@
-<h1 class='view-title'>Produtos</h1>
+<h1 class='view-title'><%= t '.title' %></h1>
+
+<div class='flex flex-col gap-4'>
+  <% @products.each do |p| %>
+    <%= link_to product_path(p) do %>
+      <div class='p-4 bg-black hover:scale-105'>
+        <span class='text-white'><%= p.name %></span>
+      </div>
+    <% end %>
+  <% end %>
+</div>
