--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -2,10 +2,8 @@
 
 <div class='flex flex-col gap-4'>
   <% @batches.each do |b| %>
-    <%= link_to batch_path(b) do %>
-      <div class='p-4 bg-neutral-300'>
-        <%= t '.prefix' %> <%= b.code %>
-      </div>
+    <%= link_to batch_path(b), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
+      <%= t '.prefix' %> <%= b.code %>
     <% end %>
   <% end %>
 </div>
