--- a/app/views/batches/new.html.erb
+++ b/app/views/batches/new.html.erb
@@ -1,7 +1,7 @@
 <h1 class='view-title'><%= t '.title' %></h1>
 
-<%= form_with model: @batch do |f| %>
-  <div>
+<%= form_with model: @batch, class: 'm-auto' do |f| %>
+  <div class='form-field'>
     <%= f.label :code %>
     <%= f.text_field :code, value: @code_suggestion %>
 
@@ -10,41 +10,45 @@
     <% end %>
   </div>
 
-  <div>
-    <%= f.label :start_date %>
-    <%= f.date_field :start_date %>
+  <div class='flex gap-4'>
+    <div class='form-field w-full'>
+      <%= f.label :start_date %>
+      <%= f.date_field :start_date %>
 
-    <% if @batch.errors[:start_date].any? %>
-      <span class='errors'><%= @batch.errors[:start_date].join(', ') %></span>
-    <% end %>
+      <% if @batch.errors[:start_date].any? %>
+        <span class='errors'><%= @batch.errors[:start_date].join(', ') %></span>
+      <% end %>
+    </div>
+
+    <div class='form-field w-full'>
+      <%= f.label :end_date %>
+      <%= f.date_field :end_date %>
+
+      <% if @batch.errors[:end_date].any? %>
+        <span class='errors'><%= @batch.errors[:end_date].join(', ') %></span>
+      <% end %>
+    </div>
   </div>
 
-  <div>
-    <%= f.label :end_date %>
-    <%= f.date_field :end_date %>
+  <div class='flex gap-4'>
+    <div class='form-field w-full'>
+      <%= f.label :minimum_bid %>
+      <%= f.text_field :minimum_bid %>
 
-    <% if @batch.errors[:end_date].any? %>
-      <span class='errors'><%= @batch.errors[:end_date].join(', ') %></span>
-    <% end %>
+      <% if @batch.errors[:minimum_bid].any? %>
+        <span class='errors'><%= @batch.errors[:minimum_bid].join(', ') %></span>
+      <% end %>
+    </div>
+
+    <div class='form-field w-full'>
+      <%= f.label :minimum_difference_between_bids %>
+      <%= f.text_field :minimum_difference_between_bids %>
+
+      <% if @batch.errors[:minimum_difference_between_bids].any? %>
+        <span class='errors'><%= @batch.errors[:minimum_difference_between_bids].join(', ') %></span>
+      <% end %>
+    </div>
   </div>
 
-  <div>
-    <%= f.label :minimum_bid %>
-    <%= f.text_field :minimum_bid %>
-
-    <% if @batch.errors[:minimum_bid].any? %>
-      <span class='errors'><%= @batch.errors[:minimum_bid].join(', ') %></span>
-    <% end %>
-  </div>
-
-  <div>
-    <%= f.label :minimum_difference_between_bids %>
-    <%= f.text_field :minimum_difference_between_bids %>
-
-    <% if @batch.errors[:minimum_difference_between_bids].any? %>
-      <span class='errors'><%= @batch.errors[:minimum_difference_between_bids].join(', ') %></span>
-    <% end %>
-  </div>
-
-  <%= f.submit t '.submit' %>
+  <%= f.submit t('.submit'), class: 'form-submit' %>
 <% end %>
