--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,10 +2,9 @@
 
 <div class='flex flex-col gap-4'>
   <% @products.each do |p| %>
-    <%= link_to product_path(p) do %>
-      <div class='p-4 bg-black hover:scale-105'>
-        <span class='text-white'><%= p.name %></span>
-      </div>
+    <%= link_to product_path(p), class: 'p-4 flex flex-col gap-2 bg-secondary hover:scale-105 transition-all rounded' do %>
+      <span class='text-white'><%= p.name %></span>
+      <span class='text-white text-xs italic'><%= p.code %></span>
     <% end %>
   <% end %>
 </div>
