--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -14,6 +14,6 @@
 <div class='flex flex-col gap-2'>
   <span><strong><%= t '.start_date' %>:</strong> <%= l(@batch.start_date) %></span>
   <span><strong><%= t '.end_date' %>:</strong> <%= l(@batch.end_date) %></span>
-  <span><strong><%= t '.minimum_bid' %>:</strong> <%= @batch.minimum_bid %> centavos</span>
-  <span><strong><%= t '.minimum_difference_between_bids' %>:</strong> <%= @batch.minimum_difference_between_bids %> centavos</span>
+  <span><strong><%= t '.min_bid_in_centavos' %>:</strong> <%= @batch.min_bid_in_centavos %> centavos</span>
+  <span><strong><%= t '.min_diff_between_bids_in_centavos' %>:</strong> <%= @batch.min_diff_between_bids_in_centavos %> centavos</span>
 </div>
