--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,40 @@
-<h2><%= I18n.t 'devise.registrations.new.sign_up' %></h2>
+<h2 class='view-title text-primary'><%= t '.sign_up' %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'm-auto' }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
+  <div class="field form-field">
+    <%= f.label :name %>
     <%= f.text_field :name, autofocus: true %>
   </div>
 
-  <div class="field">
-    <%= f.label :cpf %><br />
+  <div class="field form-field">
+    <%= f.label :cpf %>
     <%= f.number_field :cpf %>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <div class="field form-field">
+    <%= f.label :email %>
     <%= f.email_field :email, autocomplete: "email" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+  <div class="field form-field">
+    <div class='flex gap-1'>
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+    </div>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
+  <div class="field form-field">
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit I18n.t 'devise.registrations.new.sign_up_button' %>
+    <%= f.submit t('.sign_up_button'), class: 'form-submit' %>
   </div>
 <% end %>
 
