--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div id='batch-menu' class='menu mx-auto mb-6 w-[532px] flex flex-col gap-2'>
     <span class='text-primary text-lg font-semibold'>Lotes</span>
 
-    <%= link_to 'Aprovar Lotes', batches_path, class: 'p-6 text-white text-lg bg-secondary hover:scale-105 transition-all rounded' %>
+    <%= link_to 'Listar Lotes', batches_path, class: 'p-6 text-white text-lg bg-secondary hover:scale-105 transition-all rounded' %>
     <%= link_to 'Cadastrar Lotes', new_batch_path, class: 'p-6 text-white text-lg bg-secondary hover:scale-105 transition-all rounded' %>
   </div>
 
@@ -23,7 +23,7 @@
   <div id='batch-menu' class='menu mx-auto mb-6 w-[532px] flex flex-col gap-2'>
     <span class='text-primary text-lg font-semibold'>Lotes</span>
 
-    <%= link_to 'Lotes em Leilão', batches_path, class: 'p-6 text-white text-lg bg-secondary hover:scale-105 transition-all rounded' %>
+    <%= link_to 'Listar Lotes', batches_path, class: 'p-6 text-white text-lg bg-secondary hover:scale-105 transition-all rounded' %>
   </div>
 
   <div id='product-menu' class='menu mx-auto mb-6 w-[532px] flex flex-col gap-2'>
