--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -1,9 +1,13 @@
 <h1 class='view-title'><%= t '.title' %></h1>
 
 <div class='flex flex-col gap-4'>
-  <% @batches.each do |b| %>
-    <%= link_to batch_path(b), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
-      <%= t '.prefix' %> <%= b.code %>
+  <% if @batches.any? %>
+    <% @batches.each do |b| %>
+      <%= link_to batch_path(b), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
+        <%= t '.prefix' %> <%= b.code %>
+      <% end %>
     <% end %>
+  <% else %>
+    <p class='text-neutral-300'><%= t '.not_found_message' %></p>
   <% end %>
 </div>
