Novos casos de teste de sistema para visualização de detalhes de um lote criado, novo caso de teste unitário para o modelo de produtos criado, método que gera o código de um produto corrigido para não gerar um código novo durante um update, views relacionadas aos lotes e produtos modificadas, controller de lotes modificado

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,7 +23,7 @@
   <% if current_user.present? && current_user.is_admin %>
     <% if @product.batch.present? %>
       <div class='flex items-center gap-4'>
-        <strong><%= t '.batch' %>:</strong> <%= link_to @product.batch.code, @product.batch %>
+        <strong><%= t '.batch' %>:</strong> <%= link_to @product.batch.code, @product.batch, class: 'underline hover:text-primary' %>
         <%= button_to t('.remove_product_from_batch'), false, class: 'p-2 bg-black text-white rounded' %>
       </div>
     <% else %>
