--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -26,9 +26,16 @@
 </div>
 
 <div class='mb-8 flex flex-col gap-4'>
-  <h2 class='view-subtitle'>
-    <%= t '.linked_products' %>
-  </h2>
+  <div class='flex items-center justify-between'>
+    <h2 class='view-title'><%= t '.linked_products' %></h2>
+
+    <% if (current_user.present? && current_user.is_admin) %>
+      <%= form_with url: add_product_batch_path, method: :patch, class: 'flex flex-row' do |f| %>
+        <%= f.collection_select :product_id, @products, :id, :name, prompt: t('.add_product') %>
+        <%= f.submit t('.add_product_button_text'), class: 'form-submit m-0' %>
+      <% end %>
+    <% end %>
+  </div>
 
   <% if @batch.products.any? %>
     <% @batch.products.each do |p| %>
