--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,13 +27,13 @@
       <%= link_to @product.batch.code, @product.batch, class: 'underline hover:text-primary' %>
 
       <% if current_user.present? && current_user.is_admin %>
-        <%= button_to t('.unlink_batch_button_text'), false, class: 'p-2 bg-black text-white rounded' %>
+        <%= button_to t('.unlink_batch_button_text'), unlink_batch_product_path, method: :patch, class: 'p-2 bg-black text-white rounded' %>
       <% end %>
     <% else %>
       <%= t '.without_batch' %>
 
       <% if current_user.present? && current_user.is_admin %>
-        <%= form_with url: false, method: :patch, class: 'flex flex-row' do |f| %>
+        <%= form_with url: link_batch_product_path, method: :patch, id: 'link-batch', class: 'flex flex-row' do |f| %>
           <%= f.collection_select :batch_id, @batches, :id, :get_description, prompt: t('.link_batch') %>
           <%= f.submit t('.link_batch_button_text'), class: 'form-submit m-0' %>
         <% end %>
