Setup inicial do Active Storage

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -15,6 +15,10 @@
     @apply p-4 w-full text-black rounded-lg;
   }
 
+  input[type='file'] {
+    @apply text-white;
+  }
+
   select {
     @apply text-black;
   }
