--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
     <span class='italic'><%= @product.description %></span>
   </div>
 
-  <% if current_user.present? && current_user.is_admin %>
+  <% if user_signed_in? && current_user.is_admin %>
     <%= button_to t('.remove_product'), false, class: 'p-2 bg-red-400 text-white rounded' %>
   <% end %>
 </div>
@@ -32,18 +32,18 @@
             <%= link_to @product.batch.code, @product.batch, class: 'underline hover:text-primary' %>
             <em class='text-neutral-300'>&lt;<%= t '.awaiting_approval' %>&gt;</em>
           </span>
+
+          <% if user_signed_in? && current_user.is_admin %>
+            <%= button_to t('.unlink_batch_button_text'), unlink_batch_product_path, method: :patch, class: 'p-2 bg-black text-white rounded' %>
+          <% end %>
         <% else %>
           <span><%= @product.batch.code %> <em class='text-neutral-300'>&lt;<%= t '.awaiting_approval' %>&gt;</em></span>
         <% end %>
       <% end %>
-
-      <% if current_user.present? && current_user.is_admin %>
-        <%= button_to t('.unlink_batch_button_text'), unlink_batch_product_path, method: :patch, class: 'p-2 bg-black text-white rounded' %>
-      <% end %>
     <% else %>
       <%= t '.without_batch' %>
 
-      <% if current_user.present? && current_user.is_admin %>
+      <% if user_signed_in? && current_user.is_admin %>
         <%= form_with url: link_batch_product_path, method: :patch, id: 'link-batch', class: 'flex flex-row' do |f| %>
           <%= f.collection_select :batch_id, @batches, :id, :get_description, prompt: t('.link_batch') %>
           <%= f.submit t('.link_batch_button_text'), class: 'form-submit m-0' %>
