Testes de sistema para página de listagem de lotes modificados, pequenas mudanças/adições no controller, view e traduções pt-BR relacionadas a página de listagem de lotes realizadas

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -41,6 +41,10 @@
     @apply my-6 text-primary text-xl font-semibold;
   }
 
+  .view-subtitle {
+    @apply text-secondary text-lg font-semibold;
+  }
+
   .form-field {
     @apply mb-4 flex flex-col gap-2;
   }
