--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -34,7 +34,7 @@
 
 @layer components {
   .btn-user-menu {
-    @apply px-4 py-2 border-2 rounded;
+    @apply px-4 py-2 border-2 hover:bg-neutral-200 transition-all rounded;
   }
 
   .view-title {
