--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 </div>
 
-<div class='flex flex-col gap-2'>
+<div class='mb-10 flex flex-col gap-2'>
   <% if @product.category.present? %>
     <span><strong><%= t '.category' %>:</strong> <%= @product.category.name %></span>
   <% else %>
@@ -54,7 +54,7 @@
 </div>
 
 <div class='mb-8 flex flex-col gap-4'>
-  <h2 class='view-title'><%= t '.product_image' %></h2>
+  <h2 class='view-subtitle'><%= t '.product_image' %></h2>
 
   <% if @product.image.attached? %>
     <%= image_tag @product.image, size: '250', title: @product.name, alt: "imagem #{@product.name}" %>
